@@ -26,12 +26,13 @@
 #include "ptexlib.h"
 #include "lua/luatex-api.h"
 
-#include "lauxlib.h"
-#include "lualib.h"
 
 #ifdef LuajitTeX
-#include "lauxlib_bridge.h"
+#include "lua/lauxlib_bridge.h"
+#else
+#include "lauxlib.h"
 #endif
+#include "lualib.h"
 
 static const char _svn_version[] =
     "$Id: liolibext.c 4781 2014-02-10 11:05:24Z taco $ $URL: https://foundry.supelec.fr/svn/luatex/trunk/source/texk/web2c/luatexdir/lua/liolibext.c $";
